# zombikilla

./: .gitignore  Cargo.toml  README.md  config.sample.toml  config.toml
.github/workflows/: ci.yml
src/: main.rs
