[package]
name = "zombikilla_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tray-icon = "0.19"
winit = "0.29"
nix = { version = "0.29", features = ["signal"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
